[package]
name = "download_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-tls = "0.5.0"
indicatif = "0.16.2"
serde = "1.0.136"
serde_json = "1.0"
terminal-emoji = "0.4.1"
mime = "0.3.16"